# simpleton-engine

./: CMakeLists.txt  README.md  buildgame.bat
engine/: CMakeLists.txt
engine/include/simpleton/: cApp.hpp  inputDefines.hpp
engine/include/simpleton/core/: app.hpp  cApp.hpp
engine/include/simpleton/events/: cEventKeyPress.hpp  cEventKeyRelease.hpp  cEventMouseMove.hpp  cEventMousePress.hpp  cEventMouseRelease.hpp  cEventMouseScroll.hpp  cEventSecondPassed.hpp  cEventWindowClose.hpp  iEvent.hpp  iEventHandler.hpp
engine/include/simpleton/managers/: iEventManager.hpp  iInputManager.hpp  iManager.hpp  iRenderManager.hpp  iWindowManager.hpp
engine/include/simpleton/scene/: cObject.hpp
engine/include/simpleton/util/: cTimer.hpp
engine/include/simpleton/util/primitives/: color.hpp  point.hpp  triangle.hpp  vec2.hpp
engine/src/core/: AppEventHandler.cpp  AppEventHandler.hpp  AppImpl.hpp  GlfwEnginePointer.hpp  app.cpp  cApp.cpp  cAppInternal.hpp  cDependencyResolver.hpp
engine/src/graphics/: cShader.cpp  cShader.hpp
engine/src/graphics/opengl/: cMeshVertex.hpp  cPrimitiveMesh.cpp  cPrimitiveMesh.hpp  cShader.cpp  cShader.hpp
engine/src/managers/: cEventManager.cpp  cEventManager.hpp  cInputManager.cpp  cInputManager.hpp  cRenderManager.cpp  cRenderManager.hpp  cWindowManager.cpp  cWindowManager.hpp  iManager.hpp  iManagerInternal.hpp
engine/src/managers/render/: cOpenGLRenderManager.cpp  cOpenGLRenderManager.hpp  iInternalRenderManager.hpp
engine/src/util/: cLog.hpp  cTimer.cpp  log.hpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
